# VoxelTest

./: CMakeLists.txt  README.md
include/input/: camera.hpp
include/renderer/: renderer.hpp
include/renderer/graphics/: batch.hpp  mesh.hpp  texture.hpp
include/renderer/shaders/: program.hpp  shader.hpp
include/utils/: GLError.hpp  Resources.hpp
include/world/: chunk.hpp
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/input/: camera.cpp
src/renderer/: renderer.cpp
src/renderer/graphics/: batch.cpp  mesh.cpp  texture.cpp
src/renderer/shaders/: program.cpp  shader.cpp
src/utils/: GLError.cpp
src/world/: chunk.cpp
